criacao do combo de tipo de despesa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <span>VxAssistMaterial</span>
   <span class="example-spacer"></span>
   
-  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+  <button mat-icon-button [matMenuTriggerFor]="menu" >
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
@@ -23,22 +23,6 @@
       <span>Fornecedores</span>
     </button>
   </mat-menu>
-  
-
 </mat-toolbar>
-
-<p>
-<a href='https://material.io/resources/icons/?style=baseline'>https://material.io/resources/icons/?style=baseline</a>
-</p>
-<p>
-<a href='https://fontawesome.com/start'>https://fontawesome.com/start</a>
-</p>
-<p>
-<a href='https://material.angular.io/components/icon/overview'>https://material.angular.io/components/icon/overview</a>
-</p>
-<p>
-<a href='https://angular.io/start/start-deployment'>https://angular.io/start/start-deployment</a>
-</p>
-
 
 <router-outlet></router-outlet>
