--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #F8F8FF;}
 
 .example-spacer {
     flex: 1 1 auto;
 }
 
-mat-grid-tile {
-    background: lightblue;
+.full-width {
+  width: 100%;
 }
 
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  
+.example-card {
+  max-width: 600px;
+}
+
+.paddingTop20{
+  padding-top: 20px;
+}
