--- a/src/app/page/despesa/list-despesa/list-despesa.component.html
+++ b/src/app/page/despesa/list-despesa/list-despesa.component.html
@@ -1,1 +1,75 @@
-<p>list-despesa works!</p>
+<div class="example-container mat-elevation-z8">
+  <div class="example-loading-shade"  *ngIf="isLoadingResults || isRateLimitReached">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    <div class="example-rate-limit-reached" *ngIf="isRateLimitReached">
+      se o loading nao traz nenhum resultado pelo que entendi
+    </div>
+  </div>
+
+  <div class="example-table-container">
+
+    <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows  matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+
+      <ng-container matColumnDef="number">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+        <td mat-cell *matCellDef="let row">{{row.number}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
+      <ng-container matColumnDef="created">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Created</th>
+        <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
+        <td mat-cell *matCellDef="let row">{{row.title}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
+      <ng-container matColumnDef="state">
+        <th mat-header-cell *matHeaderCellDef>State</th>
+        <td mat-cell *matCellDef="let row">{{row.state}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
+
+      <ng-container matColumnDef="cost-number">
+          <th mat-header-cell *matHeaderCellDef>
+             <input matInput placeholder="Ex. Pizza" value="Sushi">
+           </th>
+      </ng-container>
+      <ng-container matColumnDef="cost-created">
+          <th mat-header-cell *matHeaderCellDef>createdm purchased </th>
+      </ng-container>
+      <ng-container matColumnDef="cost-title">
+          <th mat-header-cell *matHeaderCellDef> titlem purchased </th>
+      </ng-container>
+      <ng-container matColumnDef="cost-state">
+        <th mat-header-cell *matHeaderCellDef> state purchased </th>
+      </ng-container>
+
+
+
+       <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail" [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
+              <h2>area de expanxao</h2>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="['cost-number', 'cost-created', 'cost-title', 'cost-state']"
+          class="example-second-header-row">
+      </tr>
+
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+        class="example-element-row"
+        [class.example-expanded-row]="expandedElement === row"
+        (click)="expandedElement = expandedElement === row ? null : row">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+    </table>
+  </div>
+
+  <mat-paginator [length]="resultsLength" [pageSize]="30"></mat-paginator>
+</div>
