--- a/src/app/page/despesa/list-despesa/list-despesa.component.html
+++ b/src/app/page/despesa/list-despesa/list-despesa.component.html
@@ -10,24 +10,24 @@
 
     <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows  matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
 
-      <ng-container matColumnDef="number">
+      <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-        <td mat-cell *matCellDef="let row">{{row.number}}</td>
+        <td mat-cell *matCellDef="let row">{{row.id}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
-      <ng-container matColumnDef="created">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Created</th>
-        <td mat-cell *matCellDef="let row">{{row.created_at | date}}</td>
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
+        <td mat-cell *matCellDef="let row">{{row.data | date}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-        <td mat-cell *matCellDef="let row">{{row.title}}</td>
+      <ng-container matColumnDef="tipoDespesa">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Despesa</th>
+        <td mat-cell *matCellDef="let row">{{row.tipoDespesa.nome}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
-      <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef>State</th>
-        <td mat-cell *matCellDef="let row">{{row.state}}</td>
+      <ng-container matColumnDef="valor">
+        <th mat-header-cell *matHeaderCellDef>Valor</th>
+        <td mat-cell *matCellDef="let row">{{row.valor}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
 
