--- a/src/app/page/despesa/list-despesa/list-despesa.component.css
+++ b/src/app/page/despesa/list-despesa/list-despesa.component.css
@@ -63,8 +63,8 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 
-.example-element-symbol {
-  font-weight: bold;
-  font-size: 40px;
-  line-height: normal;
+.mat-column-id {
+  width: 20px;
+  background-color: red;
+  text-align: center;
 }
