--- a/src/app/page/despesa/list-despesa/list-despesa.component.html
+++ b/src/app/page/despesa/list-despesa/list-despesa.component.html
@@ -13,42 +13,56 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
         <td mat-cell *matCellDef="let row">{{row.id}}</td>
-        <td mat-footer-cell *matFooterCellDef> Total </td>
-      </ng-container>
-      <ng-container matColumnDef="data">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
-        <td mat-cell *matCellDef="let row">{{row.data | date}}</td>
-        <td mat-footer-cell *matFooterCellDef> Total </td>
+        <td mat-footer-cell *matFooterCellDef> </td>
       </ng-container>
       <ng-container matColumnDef="tipoDespesa">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Despesa</th>
         <td mat-cell *matCellDef="let row">{{row.tipoDespesa.nome}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
+      <ng-container matColumnDef="fornecedor">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Fornecedor</th>
+        <td mat-cell *matCellDef="let row">{{row.fornecedor.nome}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
+      <ng-container matColumnDef="data">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
+        <td mat-cell *matCellDef="let row">{{row.data | date: 'dd/MM/yyyy'}}</td>
+        <td mat-footer-cell *matFooterCellDef> </td>
+      </ng-container>
+      <ng-container matColumnDef="formaPagamento">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Pagamento</th>
+        <td mat-cell *matCellDef="let row">{{row.formaPagamento.nome}}</td>
+        <td mat-footer-cell *matFooterCellDef> Total </td>
+      </ng-container>
       <ng-container matColumnDef="valor">
         <th mat-header-cell *matHeaderCellDef>Valor</th>
-        <td mat-cell *matCellDef="let row">{{row.valor}}</td>
+        <td mat-cell *matCellDef="let row">{{row.valor | number : '1.2-2'}}</td>
         <td mat-footer-cell *matFooterCellDef> Total </td>
       </ng-container>
 
-      <ng-container matColumnDef="cost-number">
+      <ng-container matColumnDef="filter-id">
           <th mat-header-cell *matHeaderCellDef>
              <input matInput placeholder="Ex. Pizza" value="Sushi">
            </th>
       </ng-container>
-      <ng-container matColumnDef="cost-created">
-          <th mat-header-cell *matHeaderCellDef>createdm purchased </th>
+      <ng-container matColumnDef="filter-tipo">
+          <th mat-header-cell *matHeaderCellDef>campo filtro</th>
       </ng-container>
-      <ng-container matColumnDef="cost-title">
-          <th mat-header-cell *matHeaderCellDef> titlem purchased </th>
+            <ng-container matColumnDef="filter-fornecedor">
+          <th mat-header-cell *matHeaderCellDef>campo filtro</th>
       </ng-container>
-      <ng-container matColumnDef="cost-state">
-        <th mat-header-cell *matHeaderCellDef> state purchased </th>
+      <ng-container matColumnDef="filter-data">
+          <th mat-header-cell *matHeaderCellDef>campo filtro</th>
+      </ng-container>
+      <ng-container matColumnDef="filter-formaPagamento">
+          <th mat-header-cell *matHeaderCellDef>campo filtro</th>
+      </ng-container>
+      <ng-container matColumnDef="filter-valor">
+        <th mat-header-cell *matHeaderCellDef>campo filtro</th>
       </ng-container>
 
-
-
-       <ng-container matColumnDef="expandedDetail">
+      <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
           <div class="example-element-detail" [@detailExpand]="row == expandedElement ? 'expanded' : 'collapsed'">
               <h2>area de expanxao</h2>
@@ -57,7 +71,8 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-header-row *matHeaderRowDef="['cost-number', 'cost-created', 'cost-title', 'cost-state']"
+      <tr mat-header-row 
+          *matHeaderRowDef="['filter-id', 'filter-tipo', 'filter-fornecedor', 'filter-data', 'filter-formaPagamento', 'filter-valor']"
           class="example-second-header-row">
       </tr>
 
