--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 .paddingTop20{
   padding-top: 20px;
 }
+
+.text-center{
+  text-align: center;
+}
+
+.text-right{
+  text-align: right;
+}
