--- a/src/app/page/despesa/list-despesa/list-despesa.component.html
+++ b/src/app/page/despesa/list-despesa/list-despesa.component.html
@@ -8,7 +8,7 @@
 
   <div class="example-table-container">
 
-    <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows  matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+    <table mat-table [dataSource]="dados" class="example-table" multiTemplateDataRows  matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
 
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
@@ -71,7 +71,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-header-row 
+      <tr mat-header-row
           *matHeaderRowDef="['filter-id', 'filter-tipo', 'filter-fornecedor', 'filter-data', 'filter-formaPagamento', 'filter-valor']"
           class="example-second-header-row">
       </tr>
